--- a/StudentTemplates/studenthome.html
+++ b/StudentTemplates/studenthome.html
@@ -20,7 +20,7 @@
                 <li><a href="{{url_for('student_update')}}">Student Update</a></li>
                 <li><a href="{{url_for('student_class')}}">Student Class Update</a></li>
                 <li><a href="{{url_for('student_contact')}}">Student Contact Update</a></li>
-                <li><a href="">Students Details</a></li>
+                <li><a href="{{url_for('student_details')}}">Students Details</a></li>
             </ul>
         </div>
     </div>
@@ -48,7 +48,7 @@
     }
 
     body {
-        background-image: url("Photos/astronaut-wearing-spacesuit.jpg");
+        background-image: url("Photos/astronaut-wearing-spacesuit\ new.jpg");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
